--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import "tailwindcss";
 
 body {
-    font-family: "Inter", system-ui, -apple-system, sans-serif;
+    font-family:
+        "Inter",
+        system-ui,
+        -apple-system,
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
