--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* App.css */
 .group {
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -7,5 +8,5 @@
 
 .App {
     min-height: 100vh;
-    background-color: #000;
+    background-color: #dff2fe;
 }
